Finishing up the gtk2 theme

--- a/gnome-shell/gnome-shell-sass/_colors.scss
+++ b/gnome-shell/gnome-shell-sass/_colors.scss
@@ -7,7 +7,7 @@ $dark_borders_color: darken($dark_bg_color,15%);
 
 $base_color: if($variant == 'light', #FFFFFF, #111);
 $bg_color: if($variant == 'light', #dededc, $dark_bg_color);
-$fg_color: if($variant == 'light', #4c4c4c, $dark_fg_color);
+$fg_color: if($variant == 'light', #3C3C3C, $dark_fg_color);
 
 $selected_fg_color: #ffffff;
 $selected_bg_color: #fb6f55;
