--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -2103,6 +2103,7 @@ notebook {
 scrollbar {
   $_slider_min_length: 40px;
   $_scrollbar_size: 14px;
+  $_overlay_size: 6px;
 
   @at-root * {
     -GtkScrollbar-has-backward-stepper: true;
@@ -2118,7 +2119,7 @@ scrollbar {
     min-height: $_scrollbar_size;
     margin: -1px;
     border: 1px solid transparent; // Needs to be at a minimum of one pixel or hovering will resize the scrollbar
-    border-radius: 0;
+    border-radius: $circular_radius;
     background-clip: padding-box;
     background-color: $scrollbar_slider_color;
 
@@ -2131,8 +2132,8 @@ scrollbar {
 
   &.fine-tune {
     slider {
-      min-width: $_scrollbar_size;
-      min-height: $_scrollbar_size;
+      min-width: $_overlay_size;
+      min-height: $_overlay_size;
     }
 
     &.horizontal slider { border-width: 0; }
@@ -2147,8 +2148,8 @@ scrollbar {
 
       slider {
         margin: 0;
-        min-width: $_scrollbar_size;
-        min-height: $_scrollbar_size;
+        min-width: $_overlay_size;
+        min-height: $_overlay_size;
         background-color: $fg_color;
         border: 0px solid if($variant == 'light', white, black);
       }
@@ -2157,12 +2158,15 @@ scrollbar {
         min-width: $_scrollbar_size;
         min-height: $_scrollbar_size;
         background-clip: padding-box;
+        background-color: transparent;
         border: 1px solid transparent;
+        
+        -gtk-icon-source: none;
       }
 
       &.horizontal {
         slider {
-          margin: 0 0px;
+          margin: 0;
           min-width: $_slider_min_length;
         }
 
@@ -2174,7 +2178,7 @@ scrollbar {
 
       &.vertical {
         slider {
-          margin: 0px 0;
+          margin: 0;
           min-height: $_slider_min_length;
         }
 
