--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -848,7 +848,7 @@ scrollbar { background-color: whitesmoke; border-width: 0; }
 
 * { -GtkScrollbar-has-backward-stepper: true; -GtkScrollbar-has-forward-stepper: true; }
 
-scrollbar slider { min-width: 14px; min-height: 14px; margin: -1px; border: 1px solid transparent; border-radius: 0; background-clip: padding-box; background-color: #8d8d8c; }
+scrollbar slider { min-width: 14px; min-height: 14px; margin: -1px; border: 1px solid transparent; border-radius: 99px; background-clip: padding-box; background-color: #8d8d8c; }
 
 scrollbar slider:hover { background-color: #5c5c5c; }
 
@@ -856,7 +856,7 @@ scrollbar slider:hover:active { background-color: #5c5c5c; }
 
 scrollbar slider:disabled { background-color: transparent; }
 
-scrollbar.fine-tune slider { min-width: 14px; min-height: 14px; }
+scrollbar.fine-tune slider { min-width: 6px; min-height: 6px; }
 
 scrollbar.fine-tune.horizontal slider { border-width: 0; }
 
@@ -864,15 +864,15 @@ scrollbar.fine-tune.vertical slider { border-width: 0; }
 
 scrollbar.overlay-indicator:not(.dragging):not(.hovering) { border-color: transparent; opacity: 0.4; background-color: transparent; }
 
-scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider { margin: 0; min-width: 14px; min-height: 14px; background-color: #3C3C3C; border: 0px solid white; }
+scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider { margin: 0; min-width: 6px; min-height: 6px; background-color: #3C3C3C; border: 0px solid white; }
 
-scrollbar.overlay-indicator:not(.dragging):not(.hovering) button { min-width: 14px; min-height: 14px; background-clip: padding-box; border: 1px solid transparent; }
+scrollbar.overlay-indicator:not(.dragging):not(.hovering) button { min-width: 14px; min-height: 14px; background-clip: padding-box; background-color: transparent; border: 1px solid transparent; -gtk-icon-source: none; }
 
-scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal slider { margin: 0 0px; min-width: 40px; }
+scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal slider { margin: 0; min-width: 40px; }
 
 scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal button { margin: -1px; min-width: 14px; }
 
-scrollbar.overlay-indicator:not(.dragging):not(.hovering).vertical slider { margin: 0px 0; min-height: 40px; }
+scrollbar.overlay-indicator:not(.dragging):not(.hovering).vertical slider { margin: 0; min-height: 40px; }
 
 scrollbar.overlay-indicator:not(.dragging):not(.hovering).vertical button { margin: -1px; min-height: 14px; }
 
